fix alignment of the text footer

--- a/css/style.css
+++ b/css/style.css
@@ -1337,7 +1337,7 @@ a {
     color: rgba(77, 100, 120, 0.5);
     text-align: right;
     font-size: 14px;
-    line-height: 30px; }
+    line-height: 40px; }
     .footer .open-source .github {
       position: absolute;
       top: 8px;
