--- a/scss/layout/_site.scss
+++ b/scss/layout/_site.scss
@@ -121,7 +121,7 @@ a {
     color: rgba(77, 100, 120, 0.5);
     text-align: right;
     font-size: 14px;
-    line-height: 30px;
+    line-height: 40px;
     .github {
       position: absolute;
       top: 8px;
